--- a/styles/partials/_blog.scss
+++ b/styles/partials/_blog.scss
@@ -3,7 +3,7 @@
     // -------------------- Header styles --------------------
     
     .fullbleed {
-        background: url(../../assets/blog-image-1.jpg);
+        background: url(../assets/blog-image-1.jpg);
         background-size: cover;
         position: relative;
     }
