--- a/styles/partials/_contact.scss
+++ b/styles/partials/_contact.scss
@@ -1,7 +1,7 @@
 .contact {
     // ***** Header Styles *****
     .fullbleed {
-        background: url('../../assets/contact-image-1.jpg');
+        background: url('../assets/contact-image-1.jpg');
         background-size: cover;
     }
 
