--- a/styles/partials/_header-footer.scss
+++ b/styles/partials/_header-footer.scss
@@ -1,7 +1,7 @@
 .index header {
 
     .fullbleed {
-        background: url(../../assets/home-image-1.jpg);
+        background: url(../assets/home-image-1.jpg);
         background-size: cover;
     }
 
